Deployment/comment_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: templates-comments
  template:
    metadata:
      labels:
        app: templates-comments
    spec:
      containers:
      - name: comments-container
        imagePullPolicy: IfNotPresent
        image: comments
        ports:
        - containerPort: 4001 
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - protocol: TCP
      port: 4001 # Port du service
      targetPort: 4001  # Port du conteneur
  type: NodePort
