Deployment/event-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 3  # Nombre de réplicas souhaitées
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: image_event:latest                  
          ports:
            - containerPort: 4005  # Port sur lequel votre application écoute
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 80  # Port du service
      targetPort: 40005 # Port du conteneur
  type: ClusterIP
