Deployment/posts_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: image_post:latest 
            - containerPort: 4000  
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts
  ports:
    - protocol: TCP
      port: 80  # Port du service
      targetPort: 4000  # Port du conteneur
  type:  ClusterIP
